--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "project1",
+  "name": "myportfolio_camilorw",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://CamiloRW17.github.io/portfolio-camilorw",  
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "predeploy": "npm run build",     
+    "deploy": "gh-pages -d dist"      
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "vite": "^7.2.4"
   },
   "dependencies": {
