--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "myportfolio_camilorw",
+  "name": "neutra",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://CamiloRW17.github.io/portfolio-camilorw",  
+  "homepage": "https://CamiloRW17.github.io/neutra",  
   "type": "module",
   "scripts": {
     "dev": "vite",
